--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Tribute Page</title>
+		<title>My Tribute Page</title>
 		<link rel="stylesheet" href="./styles/style.css" />
 	</head>
 	<body>
-		<div id="main">
+		<main id="main">
 			<h1 id="title">Dr. Norman Borlaug</h1>
 			<p>The man who saved a billion lives</p>
 			<figure id="img-div">
@@ -22,7 +22,7 @@
 					on how to increase wheat yields - part of his life-long war on hunger.
 				</figcaption>
 			</figure>
-			<div id="tribute-info">
+			<section id="tribute-info">
 				<h3 id="headline">Here's a time line of Dr. Borlaug's life:</h3>
 				<ul>
 					<li><strong>1914</strong> - Born in Cresco, Iowa</li>
@@ -117,7 +117,7 @@
 						>Wikipedia entry</a
 					>.
 				</h3>
-			</div>
-		</div>
+			</section>
+		</main>
 	</body>
 </html>
